--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,10 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta property="og:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.ferrocoughlin.com/" />
-    <meta property="og:image" content="https://lh4.googleusercontent.com/e22yHhzhNI8jdUHVpwUWj4nsgIqrFhX0yCYfiAw1DG-ZeNGYeQVGv7cIqH60YRO5ovxmLXlx1w=w2048" />
+    <meta property="og:url" content="https://natandpaul.info/" />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="ferrocoughlin" />
+    <meta property="og:site_name" content="natandpaul" />
     <meta property="fb:app_id" content="{{ site.fb_app_id }}"/>
     <meta name="description" content="{{ site.description }}">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
